# Learning

./: .gitignore  CMakeLists.txt  README.md  basic.prof  basic.txt  build.sh
language/c/socket/: tcp_client  tcp_client.c  tcp_server  tcp_server.c
language/cc/cpp_class/: virtual_function.cc
language/cc/map/: map_test.cc
language/cc/vector/: compile.sh  vector_constructor.cc  vector_insert_pushback_emplaceback.cc
learning/: rabit_tracker_get_ring.py
techs/: CMakeLists.txt
techs/hpc/openmp/: REARME.md  compile.sh  openmit_for.cc  openmp_for.cc  openmp_for_concat.cc  openmp_for_parallel_sum.cc
techs/hpc/sse/: compile.sh  sse_array_sum.cc  sse_array_vars_product.cc  sse_mul_sum.cc  sse_test.cc
techs/hpc/tbb/: README.md  body.h  compile.sh  tbb_concurrent_hash_map.cc  tbb_concurrent_unordered_map.cc  tbb_parallel_for.cc  tbb_parallel_reduce.cc
techs/tensorflow/: rnn_model.py
techs/tensorflow/basic_concepts/: basic_graph.py  basic_operation.py  basic_session.py  basic_tensor.py  basic_variable.py
techs/tensorflow/data/libfm_tfrecord_data/: libfm_2tfrecord_data.txt  libfm_data.txt
techs/tensorflow/data/libsvm_tfrecord_data/: libsvm_data.txt  libsvm_to_tfrecord_data.txt
techs/tensorflow/example/: libfm_and_tfrecord.py  libfm_and_tfrecord_test.py  libsvm_and_tfrecord.py  libsvm_and_tfrecord_test.py  sparse_lr_model.py
techs/thread/: compile.sh  example.cpp
techs/thread/old/: ThreadPool.h  example.cpp  thread_pool.h  thread_pool.h.old
tools/profiler/gperftools/: CMakeLists.txt  gperftools_basic.cc
